# MLOpsProject

./: .gitignore  README.md  TERM_PROJECT_REPORT.md  application.py  dockerfile  mlflow.db  mlops_pipeline.yaml  pyproject.toml  setup.py
artifacts/model/: model.pkl
artifacts/proccessed/: scaler.pkl  x_test.pkl
cancer_pred.egg-info/: PKG-INFO  SOURCES.txt
kubeflow_pipeline/: mlops_pipeline.py
notebook/: noteboook.ipynb
src/: custom_exception.py  data_proccessing.py  logger.py  model_training.py
static/: style.css
templates/: index.html
