[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cancer-pred"
version = "0.1.0"
description = "Cancer prediction project"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*", "kubeflow_pipeline*"]
